# 3D-Game-Engine

./: .gitignore  CMakeLists.txt.txt  Cmakelist.txt.txt  LICENSE  README.md  RenderEngine.sln  imgui.ini
RenderEngine/: CMakeLists.txt  RenderEngine.vcxproj  RenderEngine.vcxproj.filters  assets.db  frgmnt_shdr.glsl  frgmnt_shdr.txt  imgui.ini  save.zer  vrtx_shdr.txt
RenderEngine/AS_DEBUG/: ___init_PI.txt  ___init_current_angle.txt  ___init_name.txt  ___init_nice.txt  ___init_pivot.txt  ___init_rotation_speed.txt  ___init_stop.txt  __cos.txt  __length.txt  __on_staert.txt  __on_start.txt  __on_update.txt  __osn_start.txt  __radians.txt  __sin.txt  __sqrt.txt  stats.txt
RenderEngine/Debug/: copy_to_clipboard.h.ifc.d.json  copy_to_clipboard.h.module.json  copy_to_clipboard.h_C4721F2ACE6D3F0A.ifc.dt.module.json  copy_to_clipboard.h_C4721F2ACE6D3F0A.ifc.dt.module.json.command  directionallight_component.h.module.json  directionallight_component.h_63045ADF9754A2FF.ifc.dt.d.json  directionallight_component.h_63045ADF9754A2FF.ifc.dt.module.json  directionallight_component.h_63045ADF9754A2FF.ifc.dt.module.json.command  mouse_picking.h.ifc.d.json  mouse_picking.h.module.json  mouse_picking.h_95BC57A3AA888A1F.ifc.dt.module.json  mouse_picking.h_95BC57A3AA888A1F.ifc.dt.module.json.command  spotlight_component.h.ifc.d.json  spotlight_component.h.module.json  spotlight_component.h_CBADA5BCF5D5B0F1.ifc.dt.module.json  spotlight_component.h_CBADA5BCF5D5B0F1.ifc.dt.module.json.command  staticmesh_component.h.module.json  staticmesh_component.h_BA78B83810141EA0.ifc.dt.d.json  staticmesh_component.h_BA78B83810141EA0.ifc.dt.module.json  staticmesh_component.h_BA78B83810141EA0.ifc.dt.module.json.command  strconvr.h.ifc.d.json  strconvr.h.module.json  strconvr.h_3208E34B711D63C1.ifc.dt.module.json  strconvr.h_3208E34B711D63C1.ifc.dt.module.json.command  vc143.idb  viewport_layer.h_F910FBB210B7730D.ifc.dt.module.json.command
RenderEngine/Debug/RenderEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  RenderEngine.lastbuildstate
RenderEngine/Debug/RenderEngine_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
RenderEngine/GAME/: Sponza.zer  level.zer  light_demo.zer  light_test.zer  new_level.zer  new_level1.zer  new_save.zer  scripting_test.zer  test.zer
RenderEngine/asset info/: info.db
RenderEngine/include/: Renderer.h  core_application.h  input.h  input_types.h  scene.h  update_manager.h
RenderEngine/include/dependencies/: IconsFontAwesome5.h  filetypes.h  glad.c  stb_image_write.h
RenderEngine/include/entity sys/: component.h  component_types.h  entity.h
RenderEngine/include/gl core/: core shader.h  core_camera.h  engine_shader_types.h  vertex_buffer.h
RenderEngine/include/gl renderer/: gl_renderer.h
RenderEngine/include/layers/: asset_viewer_layer.h  content_browser_layer.h  gui_cntx.h  gui_layer.h  layer.h  layers_define.h  layerstack.h  material_editor_layer.h  performance_ui_layer.h  project_modifiers_layer.h  properties_ui_layer.h  scene_ui_layer.h  scene_viewport_layer.h  script_debug_layer.h  script_editor_layer.h  viewport_layer.h
RenderEngine/include/other utils/: IDGEN.h  ZER.h  common.h  copy_to_clipboard.h  extra_utils.h  grid2d.h  matrix_math.h  strconvr.h
RenderEngine/include/system/: 3d_core_camera.h  asset_class.h  asset_importer.h  asset_manager.h  assets.h  assettypes.h  audio_listener.h  audio_manager.h  billboard.h  billboard_manager.h  bounding_volume.h  camera_3d.h  camera_manager.h  compose_level.h  compose_material.h  compute_cluster_test.cpp  compute_cluster_test.h  core_material.h  core_mesh.h  core_model.h  core_renderable.cpp  core_renderable.h  draw_ray.h  filewatcher.h  input_manager.h  material.h  material_types.h  mesh.h  model.h  mouse_picking.h  node.h  scene_manager.h  tag.h  timer.h
RenderEngine/include/viewport/: viewport_gui.h
RenderEngine/shaders/: Z Pre-pass_frgmnt_shdr.glsl  Z Pre-pass_vrtx_shdr.glsl  billboard_frgment.glsl  billboard_vrtx.glsl  click_color_frgment.glsl  click_color_vrtx.glsl  cluster_comp_shdr.glsl  cluster_cull_comp_shdr.glsl  default_frgmnt_shdr.glsl  default_frgmnt_shdr_new.glsl  default_vrtx_shdr.glsl  deferred_light_frgmnt.glsl  deferred_light_vrtx.glsl  emis_frgmnt_shdr.glsl  emis_vrtx_shdr.glsl  gbuffer_frgment.glsl  gbuffer_vrtx.glsl  material_frgmnt_shdr.glsl  ray_vrtx.glsl
RenderEngine/src/: 3d_core_camera.cpp  Renderer.cpp  app.cpp  core shader.cpp  entity.cpp  grid2d.cpp  input.cpp  material.cpp  mesh.cpp  model.cpp  scene.cpp  tag.cpp  timer.cpp  update_manager.cpp  vertex_buffer.cpp
RenderEngine/src/components/: boxvolume_component.cpp  camera_component.cpp  component.cpp  cube_test_comp.cpp  directionallight_component.cpp  light_component.cpp  pointlight_component.cpp  scripting_component.cpp  sound_component.cpp  spotlight_component.cpp  staticmesh_component.cpp
RenderEngine/src/layers/: asset_viewer_layer.cpp  content_browser_layer.cpp  gui_layer.cpp  layerstack.cpp  material_editor_layer.cpp  performance_ui_layer.cpp  project_modifiers_layer.cpp  properties_ui_layer.cpp  scene_ui_layer.cpp  scene_viewport_layer.cpp  script_debug_layer.cpp  script_editor_layer.cpp  viewport_layer.cpp
RenderEngine/src/other utils/: common.cpp
RenderEngine/src/sdl renderer/: gl_renderer.cpp
RenderEngine/src/systems/: asset_manager.cpp  billboard.cpp  billboard_manager.cpp  camera_3d.cpp  camera_manager.cpp  compute_cluster_test.cpp  core_mesh.cpp  core_model.cpp  core_renderable.cpp  input_manager.cpp  node.cpp  scene_manager.cpp
RenderEngine/x64/Debug/: 3d_core_camera.h.ifc.d.json  3d_core_camera.h.module.json  3d_core_camera.h_53DD7103912E25F6.ifc.dt.module.json.command  3d_core_camera.h_F1B9340BFCF195EA.ifc.dt.d.json  3d_core_camera.h_F1B9340BFCF195EA.ifc.dt.module.json  3d_core_camera.h_F1B9340BFCF195EA.ifc.dt.module.json.command  RenderEngine.exe.recipe  directional_light_component.h_5B36AB2A12CAEC1F.ifc.dt.d.json  vc143.idb  (+11 more)
(+84 files in other folders)
